--- a/ecom/shop/templates/shop/tracker.html
+++ b/ecom/shop/templates/shop/tracker.html
@@ -1,11 +1,10 @@
 {% extends 'shop/basic.html' %}
-{% block title %} My Awesome Cart Tracker{% endblock %}
+{% block title%} My Awesome Cart Tracker{% endblock %}
 {% block body %}
 <div class="container">
     <div class="col my-4">
-        <h2> Enter Your Order Id and Email address to track your order </h2>4
-
-           <form method="post" action="/shop/checkout/">{% csrf_token %}
+        <h2>Enter your Order Id and Email address to track your order</h2>
+        <form method="post" action="#" id="trackerForm">{% csrf_token %}
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputname">Order Id</label>
@@ -15,16 +14,21 @@
                     <label for="inputEmail4">Email</label>
                     <input type="email" class="form-control" id="email" name="email" placeholder="Email">
                 </div>
-                 <button type="submit" class="btn btn-primary">Track Order</button>
+                <button type="submit" class="btn btn-primary">Track Order</button>
             </div>
     </div>
     <div class="col my-4">
-        <h2>Your Order Status :</h2>
+        <h2>Your Order Status</h2>
         <div class="my-4">
             <ul class="list-group" id="items">
+                Enter your order Id and Email and click Track Order to find details about your order!
             </ul>
         </div>
-       
+        <h2>Your Order Details</h2>
+        <div class="my-4">
+            <ul class="list-group" id="citems">
+            </ul>
+        </div>
     </div>
 </div>
 {% endblock %}
@@ -45,8 +49,9 @@ $('#trackerForm').submit(function(event) {
             encode: true
         })
         .done(function(data) {
-            // console.log(data)
-            updates = JSON.parse(data);
+            console.log(data)
+            data = JSON.parse(data);
+            updates = data[0];
             if (updates.length > 0 & updates != {}) {
                 for (i = 0; i < updates.length; i++) {
                     let text = updates[i]['text'];
@@ -61,6 +66,18 @@ $('#trackerForm').submit(function(event) {
                 mystr = `<li class="list-group-item d-flex justify-content-between align-items-center">
                     Sorry, We are not able to fetch this order id and email. Make sure to type correct order Id and email</li>`
                 $('#items').append(mystr);
+            }
+            // Fill in the order details
+            cart = JSON.parse(data[1]);
+            console.log(cart);
+            for (item in cart) {
+                let name = cart[item][1];
+                let qty = cart[item][0];
+                mystr = `<li class="list-group-item d-flex justify-content-between align-items-center">
+                    ${name}
+                    <span class="badge badge-primary badge-pill">${qty}</span>
+                </li>`
+                $('#citems').append(mystr);
             }
         });
     event.preventDefault();
