Added plugins for Facebook likes, shares and comments

--- a/ecom/blog/templates/blog/basic.html
+++ b/ecom/blog/templates/blog/basic.html
@@ -14,7 +14,8 @@
             
             {% endblock %}
        </style>
-
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v11.0" nonce="Q7AqSCcT"></script>
+<!-- <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.2"></script> -->
 </head>
 
 <body>
