--- a/ecom/blog/templates/blog/blogpost.html
+++ b/ecom/blog/templates/blog/blogpost.html
@@ -7,8 +7,11 @@
                 {{post.title}}
             </h3>
             <div class="blog-post">
+                <div class="fb-like" data-href="http://127.0.0.1:8000/blog/blogpost/{{post.post_id}}" data-width="" data-layout="button" data-action="like" data-size="large" data-share="true"></div>
+                
                 <h2 class="blog-post-title">{{post.head0}}</h2>
                 <p class="blog-post-meta">18 June 2021 by <a href="#">Devangi 😁</a></p>
+                
                 <p>{{post.chead0}}</p>
                 <h2>{{post.head1}}</h2>
                 <p> {{post.chead1}}</p>
@@ -27,7 +30,8 @@
                     <li><a href="#">GitHub</a></li>
                     <li><a href="#">Twitter</a></li>
                     <li><a href="#">Facebook</a></li>
-                </ol>
+                    <div class="fb-comments" data-href="http://127.0.0.1:8000/blog/blogpost/{{post.post_id}}" data-numposts="5"></div>
+                    </ol>
             </div>
         </aside><!-- /.blog-sidebar -->
     </div>
